parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID

Grammar

Rule 0     S' -> init
Rule 1     init -> list_commands
Rule 2     list_commands -> list_commands commands
Rule 3     list_commands -> commands
Rule 4     commands -> command_execute
Rule 5     commands -> command_mkdisk
Rule 6     commands -> command_rmdisk
Rule 7     commands -> command_fdisk
Rule 8     commands -> command_mount
Rule 9     commands -> command_unmount
Rule 10    commands -> command_mkfs
Rule 11    commands -> command_login
Rule 12    commands -> command_logout
Rule 13    commands -> command_mkgrp
Rule 14    commands -> command_rmgrp
Rule 15    commands -> command_mkusr
Rule 16    commands -> command_rmusr
Rule 17    commands -> command_mkfile
Rule 18    commands -> command_cat
Rule 19    command_execute -> EXECUTE GUION PATH IGUAL CADENA
Rule 20    command_mkdisk -> MKDISK parameters_mkdisk
Rule 21    parameters_mkdisk -> parameters_mkdisk parameter_mkdisk
Rule 22    parameters_mkdisk -> parameter_mkdisk
Rule 23    parameter_mkdisk -> param_size
Rule 24    parameter_mkdisk -> param_path
Rule 25    parameter_mkdisk -> param_unit
Rule 26    parameter_mkdisk -> param_fit
Rule 27    command_rmdisk -> RMDISK GUION PATH IGUAL CADENA
Rule 28    command_fdisk -> FDISK parameters_fdisk
Rule 29    parameters_fdisk -> parameters_fdisk parameter_fdisk
Rule 30    parameters_fdisk -> parameter_fdisk
Rule 31    parameter_fdisk -> param_size
Rule 32    parameter_fdisk -> param_path
Rule 33    parameter_fdisk -> param_unit
Rule 34    parameter_fdisk -> param_name
Rule 35    parameter_fdisk -> param_type
Rule 36    parameter_fdisk -> param_fit
Rule 37    parameter_fdisk -> param_delete
Rule 38    parameter_fdisk -> param_add
Rule 39    command_mount -> MOUNT parameters_mount
Rule 40    parameters_mount -> parameters_mount parameter_mount
Rule 41    parameters_mount -> parameter_mount
Rule 42    parameter_mount -> param_path
Rule 43    parameter_mount -> param_name
Rule 44    command_unmount -> UNMOUNT GUION ID_DISK IGUAL CADENA
Rule 45    command_mkfs -> MKFS parameters_mkfs
Rule 46    parameters_mkfs -> parameters_mkfs parameter_mkfs
Rule 47    parameters_mkfs -> parameter_mkfs
Rule 48    parameter_mkfs -> param_id
Rule 49    parameter_mkfs -> param_type
Rule 50    parameter_mkfs -> param_fs
Rule 51    command_login -> LOGIN parameters_login
Rule 52    parameters_login -> parameters_login parameter_login
Rule 53    parameters_login -> parameter_login
Rule 54    parameter_login -> param_user
Rule 55    parameter_login -> param_password
Rule 56    parameter_login -> param_id
Rule 57    command_logout -> LOGOUT
Rule 58    command_mkgrp -> MKGRP GUION NAME IGUAL CADENA
Rule 59    command_rmgrp -> RMGRP GUION NAME IGUAL CADENA
Rule 60    command_mkusr -> MKUSR parameters_mkusr
Rule 61    parameters_mkusr -> parameters_mkusr parameter_mkusr
Rule 62    parameters_mkusr -> parameter_mkusr
Rule 63    parameter_mkusr -> param_user
Rule 64    parameter_mkusr -> param_password
Rule 65    parameter_mkusr -> param_grp
Rule 66    command_rmusr -> RMUSR GUION USER IGUAL CADENA
Rule 67    command_mkfile -> MKFILE parameters_mkfile
Rule 68    parameters_mkfile -> parameters_mkfile parameter_mkfile
Rule 69    parameters_mkfile -> parameter_mkfile
Rule 70    parameter_mkfile -> param_path
Rule 71    parameter_mkfile -> param_r
Rule 72    parameter_mkfile -> param_size
Rule 73    parameter_mkfile -> param_cont
Rule 74    command_cat -> CAT parameters_cat
Rule 75    parameters_cat -> parameters_cat parameter_cat
Rule 76    parameters_cat -> parameter_cat
Rule 77    parameter_cat -> param_file
Rule 78    param_size -> GUION SIZE IGUAL ENTERO
Rule 79    param_path -> GUION PATH IGUAL CADENA
Rule 80    param_unit -> GUION UNIT IGUAL UNIDAD
Rule 81    param_fit -> GUION FIT IGUAL FITSYM
Rule 82    param_name -> GUION NAME IGUAL CADENA
Rule 83    param_type -> GUION TYPE IGUAL TIPO
Rule 84    param_type -> GUION TYPE IGUAL FULL
Rule 85    param_delete -> GUION DELETE IGUAL FULL
Rule 86    param_add -> GUION ADD IGUAL ENTERO
Rule 87    param_id -> GUION ID_DISK IGUAL CADENA
Rule 88    param_fs -> GUION FS_DISK IGUAL FS
Rule 89    param_user -> GUION USER IGUAL CADENA
Rule 90    param_password -> GUION PASSWORD IGUAL CADENA
Rule 91    param_grp -> GUION GRP IGUAL CADENA
Rule 92    param_r -> GUION ERRE
Rule 93    param_cont -> GUION CONT IGUAL CADENA
Rule 94    param_file -> GUION FILE ENTERO IGUAL CADENA

Terminals, with rules where they appear

ADD                  : 86
CADENA               : 19 27 44 58 59 66 79 82 87 89 90 91 93 94
CAT                  : 74
CONT                 : 93
DELETE               : 85
ENTERO               : 78 86 94
ERRE                 : 92
EXECUTE              : 19
FDISK                : 28
FILE                 : 94
FIT                  : 81
FITSYM               : 81
FS                   : 88
FS_DISK              : 88
FULL                 : 84 85
GRP                  : 91
GUION                : 19 27 44 58 59 66 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
ID                   : 
ID_DISK              : 44 87
IGUAL                : 19 27 44 58 59 66 78 79 80 81 82 83 84 85 86 87 88 89 90 91 93 94
LOGIN                : 51
LOGOUT               : 57
MKDISK               : 20
MKFILE               : 67
MKFS                 : 45
MKGRP                : 58
MKUSR                : 60
MOUNT                : 39
NAME                 : 58 59 82
PASSWORD             : 90
PATH                 : 19 27 79
RMDISK               : 27
RMGRP                : 59
RMUSR                : 66
SIZE                 : 78
TIPO                 : 83
TYPE                 : 83 84
UNIDAD               : 80
UNIT                 : 80
UNMOUNT              : 44
USER                 : 66 89
error                : 

Nonterminals, with rules where they appear

command_cat          : 18
command_execute      : 4
command_fdisk        : 7
command_login        : 11
command_logout       : 12
command_mkdisk       : 5
command_mkfile       : 17
command_mkfs         : 10
command_mkgrp        : 13
command_mkusr        : 15
command_mount        : 8
command_rmdisk       : 6
command_rmgrp        : 14
command_rmusr        : 16
command_unmount      : 9
commands             : 2 3
init                 : 0
list_commands        : 1 2
param_add            : 38
param_cont           : 73
param_delete         : 37
param_file           : 77
param_fit            : 26 36
param_fs             : 50
param_grp            : 65
param_id             : 48 56
param_name           : 34 43
param_password       : 55 64
param_path           : 24 32 42 70
param_r              : 71
param_size           : 23 31 72
param_type           : 35 49
param_unit           : 25 33
param_user           : 54 63
parameter_cat        : 75 76
parameter_fdisk      : 29 30
parameter_login      : 52 53
parameter_mkdisk     : 21 22
parameter_mkfile     : 68 69
parameter_mkfs       : 46 47
parameter_mkusr      : 61 62
parameter_mount      : 40 41
parameters_cat       : 74 75
parameters_fdisk     : 28 29
parameters_login     : 51 52
parameters_mkdisk    : 20 21
parameters_mkfile    : 67 68
parameters_mkfs      : 45 46
parameters_mkusr     : 60 61
parameters_mount     : 39 40

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . list_commands
    (2) list_commands -> . list_commands commands
    (3) list_commands -> . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (20) command_mkdisk -> . MKDISK parameters_mkdisk
    (27) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (28) command_fdisk -> . FDISK parameters_fdisk
    (39) command_mount -> . MOUNT parameters_mount
    (44) command_unmount -> . UNMOUNT GUION ID_DISK IGUAL CADENA
    (45) command_mkfs -> . MKFS parameters_mkfs
    (51) command_login -> . LOGIN parameters_login
    (57) command_logout -> . LOGOUT
    (58) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (59) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (60) command_mkusr -> . MKUSR parameters_mkusr
    (66) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (67) command_mkfile -> . MKFILE parameters_mkfile
    (74) command_cat -> . CAT parameters_cat

    EXECUTE         shift and go to state 19
    MKDISK          shift and go to state 20
    RMDISK          shift and go to state 21
    FDISK           shift and go to state 22
    MOUNT           shift and go to state 23
    UNMOUNT         shift and go to state 24
    MKFS            shift and go to state 25
    LOGIN           shift and go to state 26
    LOGOUT          shift and go to state 27
    MKGRP           shift and go to state 28
    RMGRP           shift and go to state 29
    MKUSR           shift and go to state 30
    RMUSR           shift and go to state 31
    MKFILE          shift and go to state 32
    CAT             shift and go to state 33

    init                           shift and go to state 1
    list_commands                  shift and go to state 2
    commands                       shift and go to state 3
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> list_commands .
    (2) list_commands -> list_commands . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (20) command_mkdisk -> . MKDISK parameters_mkdisk
    (27) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (28) command_fdisk -> . FDISK parameters_fdisk
    (39) command_mount -> . MOUNT parameters_mount
    (44) command_unmount -> . UNMOUNT GUION ID_DISK IGUAL CADENA
    (45) command_mkfs -> . MKFS parameters_mkfs
    (51) command_login -> . LOGIN parameters_login
    (57) command_logout -> . LOGOUT
    (58) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (59) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (60) command_mkusr -> . MKUSR parameters_mkusr
    (66) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (67) command_mkfile -> . MKFILE parameters_mkfile
    (74) command_cat -> . CAT parameters_cat

    $end            reduce using rule 1 (init -> list_commands .)
    EXECUTE         shift and go to state 19
    MKDISK          shift and go to state 20
    RMDISK          shift and go to state 21
    FDISK           shift and go to state 22
    MOUNT           shift and go to state 23
    UNMOUNT         shift and go to state 24
    MKFS            shift and go to state 25
    LOGIN           shift and go to state 26
    LOGOUT          shift and go to state 27
    MKGRP           shift and go to state 28
    RMGRP           shift and go to state 29
    MKUSR           shift and go to state 30
    RMUSR           shift and go to state 31
    MKFILE          shift and go to state 32
    CAT             shift and go to state 33

    commands                       shift and go to state 34
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18

state 3

    (3) list_commands -> commands .

    EXECUTE         reduce using rule 3 (list_commands -> commands .)
    MKDISK          reduce using rule 3 (list_commands -> commands .)
    RMDISK          reduce using rule 3 (list_commands -> commands .)
    FDISK           reduce using rule 3 (list_commands -> commands .)
    MOUNT           reduce using rule 3 (list_commands -> commands .)
    UNMOUNT         reduce using rule 3 (list_commands -> commands .)
    MKFS            reduce using rule 3 (list_commands -> commands .)
    LOGIN           reduce using rule 3 (list_commands -> commands .)
    LOGOUT          reduce using rule 3 (list_commands -> commands .)
    MKGRP           reduce using rule 3 (list_commands -> commands .)
    RMGRP           reduce using rule 3 (list_commands -> commands .)
    MKUSR           reduce using rule 3 (list_commands -> commands .)
    RMUSR           reduce using rule 3 (list_commands -> commands .)
    MKFILE          reduce using rule 3 (list_commands -> commands .)
    CAT             reduce using rule 3 (list_commands -> commands .)
    $end            reduce using rule 3 (list_commands -> commands .)


state 4

    (4) commands -> command_execute .

    EXECUTE         reduce using rule 4 (commands -> command_execute .)
    MKDISK          reduce using rule 4 (commands -> command_execute .)
    RMDISK          reduce using rule 4 (commands -> command_execute .)
    FDISK           reduce using rule 4 (commands -> command_execute .)
    MOUNT           reduce using rule 4 (commands -> command_execute .)
    UNMOUNT         reduce using rule 4 (commands -> command_execute .)
    MKFS            reduce using rule 4 (commands -> command_execute .)
    LOGIN           reduce using rule 4 (commands -> command_execute .)
    LOGOUT          reduce using rule 4 (commands -> command_execute .)
    MKGRP           reduce using rule 4 (commands -> command_execute .)
    RMGRP           reduce using rule 4 (commands -> command_execute .)
    MKUSR           reduce using rule 4 (commands -> command_execute .)
    RMUSR           reduce using rule 4 (commands -> command_execute .)
    MKFILE          reduce using rule 4 (commands -> command_execute .)
    CAT             reduce using rule 4 (commands -> command_execute .)
    $end            reduce using rule 4 (commands -> command_execute .)


state 5

    (5) commands -> command_mkdisk .

    EXECUTE         reduce using rule 5 (commands -> command_mkdisk .)
    MKDISK          reduce using rule 5 (commands -> command_mkdisk .)
    RMDISK          reduce using rule 5 (commands -> command_mkdisk .)
    FDISK           reduce using rule 5 (commands -> command_mkdisk .)
    MOUNT           reduce using rule 5 (commands -> command_mkdisk .)
    UNMOUNT         reduce using rule 5 (commands -> command_mkdisk .)
    MKFS            reduce using rule 5 (commands -> command_mkdisk .)
    LOGIN           reduce using rule 5 (commands -> command_mkdisk .)
    LOGOUT          reduce using rule 5 (commands -> command_mkdisk .)
    MKGRP           reduce using rule 5 (commands -> command_mkdisk .)
    RMGRP           reduce using rule 5 (commands -> command_mkdisk .)
    MKUSR           reduce using rule 5 (commands -> command_mkdisk .)
    RMUSR           reduce using rule 5 (commands -> command_mkdisk .)
    MKFILE          reduce using rule 5 (commands -> command_mkdisk .)
    CAT             reduce using rule 5 (commands -> command_mkdisk .)
    $end            reduce using rule 5 (commands -> command_mkdisk .)


state 6

    (6) commands -> command_rmdisk .

    EXECUTE         reduce using rule 6 (commands -> command_rmdisk .)
    MKDISK          reduce using rule 6 (commands -> command_rmdisk .)
    RMDISK          reduce using rule 6 (commands -> command_rmdisk .)
    FDISK           reduce using rule 6 (commands -> command_rmdisk .)
    MOUNT           reduce using rule 6 (commands -> command_rmdisk .)
    UNMOUNT         reduce using rule 6 (commands -> command_rmdisk .)
    MKFS            reduce using rule 6 (commands -> command_rmdisk .)
    LOGIN           reduce using rule 6 (commands -> command_rmdisk .)
    LOGOUT          reduce using rule 6 (commands -> command_rmdisk .)
    MKGRP           reduce using rule 6 (commands -> command_rmdisk .)
    RMGRP           reduce using rule 6 (commands -> command_rmdisk .)
    MKUSR           reduce using rule 6 (commands -> command_rmdisk .)
    RMUSR           reduce using rule 6 (commands -> command_rmdisk .)
    MKFILE          reduce using rule 6 (commands -> command_rmdisk .)
    CAT             reduce using rule 6 (commands -> command_rmdisk .)
    $end            reduce using rule 6 (commands -> command_rmdisk .)


state 7

    (7) commands -> command_fdisk .

    EXECUTE         reduce using rule 7 (commands -> command_fdisk .)
    MKDISK          reduce using rule 7 (commands -> command_fdisk .)
    RMDISK          reduce using rule 7 (commands -> command_fdisk .)
    FDISK           reduce using rule 7 (commands -> command_fdisk .)
    MOUNT           reduce using rule 7 (commands -> command_fdisk .)
    UNMOUNT         reduce using rule 7 (commands -> command_fdisk .)
    MKFS            reduce using rule 7 (commands -> command_fdisk .)
    LOGIN           reduce using rule 7 (commands -> command_fdisk .)
    LOGOUT          reduce using rule 7 (commands -> command_fdisk .)
    MKGRP           reduce using rule 7 (commands -> command_fdisk .)
    RMGRP           reduce using rule 7 (commands -> command_fdisk .)
    MKUSR           reduce using rule 7 (commands -> command_fdisk .)
    RMUSR           reduce using rule 7 (commands -> command_fdisk .)
    MKFILE          reduce using rule 7 (commands -> command_fdisk .)
    CAT             reduce using rule 7 (commands -> command_fdisk .)
    $end            reduce using rule 7 (commands -> command_fdisk .)


state 8

    (8) commands -> command_mount .

    EXECUTE         reduce using rule 8 (commands -> command_mount .)
    MKDISK          reduce using rule 8 (commands -> command_mount .)
    RMDISK          reduce using rule 8 (commands -> command_mount .)
    FDISK           reduce using rule 8 (commands -> command_mount .)
    MOUNT           reduce using rule 8 (commands -> command_mount .)
    UNMOUNT         reduce using rule 8 (commands -> command_mount .)
    MKFS            reduce using rule 8 (commands -> command_mount .)
    LOGIN           reduce using rule 8 (commands -> command_mount .)
    LOGOUT          reduce using rule 8 (commands -> command_mount .)
    MKGRP           reduce using rule 8 (commands -> command_mount .)
    RMGRP           reduce using rule 8 (commands -> command_mount .)
    MKUSR           reduce using rule 8 (commands -> command_mount .)
    RMUSR           reduce using rule 8 (commands -> command_mount .)
    MKFILE          reduce using rule 8 (commands -> command_mount .)
    CAT             reduce using rule 8 (commands -> command_mount .)
    $end            reduce using rule 8 (commands -> command_mount .)


state 9

    (9) commands -> command_unmount .

    EXECUTE         reduce using rule 9 (commands -> command_unmount .)
    MKDISK          reduce using rule 9 (commands -> command_unmount .)
    RMDISK          reduce using rule 9 (commands -> command_unmount .)
    FDISK           reduce using rule 9 (commands -> command_unmount .)
    MOUNT           reduce using rule 9 (commands -> command_unmount .)
    UNMOUNT         reduce using rule 9 (commands -> command_unmount .)
    MKFS            reduce using rule 9 (commands -> command_unmount .)
    LOGIN           reduce using rule 9 (commands -> command_unmount .)
    LOGOUT          reduce using rule 9 (commands -> command_unmount .)
    MKGRP           reduce using rule 9 (commands -> command_unmount .)
    RMGRP           reduce using rule 9 (commands -> command_unmount .)
    MKUSR           reduce using rule 9 (commands -> command_unmount .)
    RMUSR           reduce using rule 9 (commands -> command_unmount .)
    MKFILE          reduce using rule 9 (commands -> command_unmount .)
    CAT             reduce using rule 9 (commands -> command_unmount .)
    $end            reduce using rule 9 (commands -> command_unmount .)


state 10

    (10) commands -> command_mkfs .

    EXECUTE         reduce using rule 10 (commands -> command_mkfs .)
    MKDISK          reduce using rule 10 (commands -> command_mkfs .)
    RMDISK          reduce using rule 10 (commands -> command_mkfs .)
    FDISK           reduce using rule 10 (commands -> command_mkfs .)
    MOUNT           reduce using rule 10 (commands -> command_mkfs .)
    UNMOUNT         reduce using rule 10 (commands -> command_mkfs .)
    MKFS            reduce using rule 10 (commands -> command_mkfs .)
    LOGIN           reduce using rule 10 (commands -> command_mkfs .)
    LOGOUT          reduce using rule 10 (commands -> command_mkfs .)
    MKGRP           reduce using rule 10 (commands -> command_mkfs .)
    RMGRP           reduce using rule 10 (commands -> command_mkfs .)
    MKUSR           reduce using rule 10 (commands -> command_mkfs .)
    RMUSR           reduce using rule 10 (commands -> command_mkfs .)
    MKFILE          reduce using rule 10 (commands -> command_mkfs .)
    CAT             reduce using rule 10 (commands -> command_mkfs .)
    $end            reduce using rule 10 (commands -> command_mkfs .)


state 11

    (11) commands -> command_login .
